--- a/style.css
+++ b/style.css
@@ -4,10 +4,11 @@
     box-sizing: border-box;
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
+    font-weight: 600;
 }
 
 body{
-    
+    background: #dadada;
     height: 100vh;
     display: flex;
     align-items: center;
@@ -21,7 +22,7 @@ body{
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    gap: 32px;
+    gap: 30px;
     cursor: pointer;
 }
 
@@ -31,11 +32,58 @@ body{
     background: transparent;
     padding: 15px 45px;
     text-align: center;
-    min-width: 200px;
+    min-width: 250px;
 }
 
 .container .btn, a{
     color: #000;
     font-size: 20px;
 }
+
+/* BOTÃO HOVER */
+.container.hover{
+    transition: ease-in-out all 0.3s;
+}
+
+.container.hover:hover{
+    border: 2px solid  #ff02abd7;
+    transition: ease-in-out all 0.3s;
+}
+
+/* BOTÃO BG */
+
+.container.bg{
+    transition: ease-in-out all 0.3s;
+}
+
+.container.bg:hover{
+    background: #ff02abd7;
+    transition: ease-in-out all 0.3s;
+}
+
+/* BOTÃO BG-1 */
+
+.container.bg-1{
+    transition: ease-in-out all 0.3s;
+    background:#f69c8a;
+}
+
+.container.bg-1:hover{
+    background: #02f7ffd7;
+    transition: ease-in-out all 0.3s;
+}
+
+/* BOTÃO BG-1 */
+.container.bg-2{
+    transition: ease-in-out all 0.3s;
+    background:#8af698;
+    box-shadow: 0px 10px 10px #000;
+   
+}
+
+.container.bg-2:hover{
+    background: #efff0bd7;
+    transition: ease-in-out all 0.3s;
+}
+
 
