--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 body{
-    background: #dadada;
+    background: #ffffff;
     height: 100vh;
     display: flex;
     align-items: center;
@@ -17,73 +17,93 @@ body{
 
 /* BOTÃO SIMPLES */
 
-.botoes{
+.container{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     gap: 30px;
     cursor: pointer;
+    
 }
+    /* BOTÂO 1 */
+    .btn-1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #11bcff;
+    font-size: 18px;
+    width: 200px;
+    height: 40px;
+    font-weight: bold;
+    border: 2px solid #11bcff;
+    box-shadow: 5px 5px 0px 0px rgb(8, 218, 255);
+    background-color: #ffffff;
+    transition: 0.3s;
+  }
+  
+  .btn-1:hover {
+    box-shadow: 0 0 #11bcff;
+    color: #ffffff;
+    background-color: #11bcff;
+    
+  }
 
-.container{
-    border: 2px solid #000;
-    border-radius: 5px;
-    background: transparent;
-    padding: 15px 45px;
-    text-align: center;
-    min-width: 250px;
-}
+  /* BOTÂO 2 */
+  .btn-2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #0177c5;
+    font-size: 18px;
+    width: 200px;
+    height: 40px;
+    border-top: 1px solid #0177c5;
+    border-right: 1px solid #0177c5;
+    border-left: 50px solid #0177c5;
+    border-bottom: 1px solid #0177c5;
+    transition: 0.3s;
+  }
+  
+  .btn-2:hover {
+    border-left-width: 1px;
+  }
 
-.container .btn, a{
-    color: #000;
-    font-size: 20px;
-}
-
-/* BOTÃO HOVER */
-.container.hover{
-    transition: ease-in-out all 0.3s;
-}
-
-.container.hover:hover{
-    border: 2px solid  #ff02abd7;
-    transition: ease-in-out all 0.3s;
-}
-
-/* BOTÃO BG */
-
-.container.bg{
-    transition: ease-in-out all 0.3s;
-}
-
-.container.bg:hover{
-    background: #ff02abd7;
-    transition: ease-in-out all 0.3s;
-}
-
-/* BOTÃO BG-1 */
-
-.container.bg-1{
-    transition: ease-in-out all 0.3s;
-    background:#f69c8a;
-}
-
-.container.bg-1:hover{
-    background: #02f7ffd7;
-    transition: ease-in-out all 0.3s;
-}
-
-/* BOTÃO BG-1 */
-.container.bg-2{
-    transition: ease-in-out all 0.3s;
-    background:#8af698;
-    box-shadow: 0px 10px 10px #000;
-   
-}
-
-.container.bg-2:hover{
-    background: #efff0bd7;
-    transition: ease-in-out all 0.3s;
-}
-
-
+  /* BOTÂO 3 */
+  .btn-3 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #3a87fc;
+    font-size: 18px;
+    width: 200px;
+    height: 40px;
+    position: relative;
+    transition: 0.3s;
+    background-color: #ffffff;
+  }
+  
+  .btn-3::before, .btn-3::after {
+    content: "";
+    display: block;
+    position: absolute;
+    border: 1px solid #3a87fc;
+    width: 100%;
+    height: 100%;
+    transition: .3s;
+  }
+  
+  .btn-3::before {
+    top: -2px;
+    left: -2px;
+  }
+  
+  .btn-3::after {
+    top: 2px;
+    left: 2px;
+  }
+  
+  .btn-3:hover::before, .btn-3:hover::after {
+    top: 0;
+    left: 0;
+  }
