--- a/style.css
+++ b/style.css
@@ -107,3 +107,204 @@ body{
     top: 0;
     left: 0;
   }
+
+  /* BOTÂO 4 */
+  .btn-4 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #555555;
+    font-size: 18px;
+    border-radius: 20px;
+    width: 200px;
+    height: 40px;
+    font-weight: bold;
+    border: 2px solid #555555;
+    transition: 0.3s;
+    box-shadow: 0px 6px 0px -2px rgb(80, 199, 255);
+    background-color: #65dbff;
+  }
+  
+  .btn-4:hover {
+    box-shadow: 0 0 #fff;
+    transform: translateY(1px);
+  }
+
+  /* BOTÂO 5 */
+  .btn-5 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #ffffff;
+    font-size: 18px;
+    border-radius: 20px;
+    width: 200px;
+    height: 40px;
+    font-weight: bold;
+    border-bottom: 5px solid #000000;
+    transition: 0.3s;
+    background-color: #006efd;
+  }
+  
+  .btn-5:hover {
+    border-bottom-width: 0;
+    transform: translateY(5px);
+  }
+
+  /* BOTÂO 6 */
+.btn-6{
+  font-size: 18px;
+  color: #fff;
+  background: linear-gradient(90deg, #0066CC 0%, #c500cc 100%);
+  padding: 10px 30px;
+  border: 2px solid #0066cc;
+  box-shadow: rgb(0, 0, 0) 0px 0px 0px 0px;
+  border-radius: 50px;
+  transition : 1000ms;
+  transform: translateY(0);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+}
+
+.btn-6:hover{
+  transition : 1000ms;
+  padding: 10px 50px;
+  transform : translateY(-0px);
+  background: linear-gradient(90deg, #0066CC 0%, #c500cc 100%);
+  color: #1aa4ce;
+  border: solid 2px #0066cc;
+}
+
+/* BOTÃO 7 */
+.btn-7{
+  font-weight: 0;
+  font-size: 18px;
+  color: #fff;
+  background-color: #0066CC;
+  padding: 10px 30px;
+  border: 2px solid #0066cc;
+  box-shadow: rgb(0, 0, 0) 0px 0px 0px 0px;
+  border-radius: 50px;
+  transition : 1067ms;
+  transform: translateY(0);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.btn-7:hover{
+  transition : 1067ms;
+  padding: 10px 45px;
+  transform : translateY(-21px);
+  background-color: #fff;
+  color: #0066cc;
+  border: solid 2px #0066cc;
+}
+
+/* BOTÃO 8 */
+.btn-8 {
+  background: transparent;
+  border: 2px solid #000;
+  border-radius: 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  float: right;
+  font-weight: 700;
+  width: 150px;
+  letter-spacing: 0.05em;
+  margin: 0;
+  outline: none;
+  overflow: visible;
+  padding: 1.25em 2em;
+  position: relative;
+  text-align: center;
+  text-transform: none;
+  transition: all 0.3s ease-in-out;
+  user-select: none;
+  font-size: 13px;
+ }
+ 
+ .btn-8::before {
+  content: " ";
+  width: 1.5625rem;
+  height: 2px;
+  background: black;
+  top: 50%;
+  left: 1.5em;
+  position: absolute;
+  transform: translateY(-50%);
+  transform-origin: center;
+  transition: background 0.3s linear, width 0.3s linear;
+ }
+ 
+ .btn-8 .text {
+  font-size: 1.125em;
+  line-height: 1.33333em;
+  padding-left: 2em;
+  display: block;
+  text-align: left;
+  transition: all 0.3s ease-in-out;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: black;
+ }
+ 
+ .btn-8 .top {
+  height: 2px;
+  width: 1.5625rem;
+  top: -2px;
+  left: 0.625rem;
+  position: absolute;
+  background: #e8e8e8;
+  transition: width 0.5s ease-out, left 0.3s ease-out;
+ }
+ 
+ .btn-8 .bottom-key-1 {
+  height: 2px;
+  width: 1.5625rem;
+  right: 1.875rem;
+  bottom: -2px;
+  position: absolute;
+  background: #e8e8e8;
+  transition: width 0.5s ease-out, right 0.3s ease-out;
+ }
+ 
+ .btn-8 .bottom-key-2 {
+  height: 2px;
+  width: 0.625rem;
+  right: 0.625rem;
+  bottom: -2px;
+  position: absolute;
+  background: #e8e8e8;
+  transition: width 0.5s ease-out, right 0.3s ease-out;
+ }
+ 
+ .btn-8:hover {
+  color: white;
+  background: black;
+ }
+ 
+ .btn-8:hover::before {
+  width: 0.9375rem;
+  background: white;
+ }
+ 
+ .btn-8:hover .text {
+  color: white;
+  padding-left: 1.5em;
+ }
+ 
+ .btn-8:hover .top-key {
+  left: -2px;
+  width: 0px;
+ }
+ 
+ .btn-8:hover .bottom-key-1,
+  .btn-8:hover .bottom-key-2 {
+  right: 0;
+  width: 0;
+ }
